2004-04-14  Nick Garnett  <nickg@calivar.com>

	* sgml/doclist: Added PPP package documentation.

2003-11-25  Manu Sharma <manu.sharma@ascom.com>

        * sgml/doclist: Add OpenBSD specific documentation.
 
2003-11-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* sgml/doclist: Added ipsec packages documentation
	* sgml/makemakefile: Added another set of man pages to the kludge.

2003-11-08  Andrew Lunn  <andrew.lunn@ascom.ch>

	* sgml/user-guide/programming.sgml: Suggest Unix users may prefer
	ecosconfig rather than the GUI.
	* sgml/user-guide/makefile: Listed the other .sgml files so
	dependency checking works
	
2003-09-11  Gary Thomas  <gary@mlbassoc.com>

	* sgml/doclist: Add ethernet PHY documentation.

2003-07-09  Jonathan Larmour  <jifl@eCosCentric.com>

	* sgml/makemakefile: Update trademark info and sort.

2003-05-01  Jonathan Larmour  <jifl@eCosCentric.com>

	* sgml/jadetex.cfg: Add this to configure PDF output nicely with index
	and coloured links.

2003-03-23  Iztok Zupet  <iz@vsr.si>

	* sgml/makemakefile: modified copyfiles to copy png-s instead of 
	gif-s.
	* sgml/README-PDF: Comment on pdfjadetext failure and workaround.

2003-03-27  Thomas Koeller  <thomas.koeller@baslerweb.com>

        * sgml/makemakefile: Modified to generate makefile that can
        be used to build docs in arbitrary directory.

2003-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* sgml/doclist: Added the simple network time protocol client
	documentation.
	
2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* sgml/doclist: Reorder in a slightly more logical order with
	related bits grouped together.
	Add docs for power management, USB (slave, eth slave, and SA11x0
	and NEC uPD8985xx drivers), and synthetic target HAL, eth and
	watchdog drivers.

	* sgml/.cvsignore: Add gifs and rename ecos.* to ecos-ref.*

	* sgml/makemakefile: Rename ecos.sgml/html/etc. to ecos-ref.
	Copy over GIFs where they exist.
	Don't treat porting guide specially at the top... treat it only as